Remove need for token and add broker to /trade/order/positions

--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -3784,7 +3784,7 @@ paths:
           required: true
           schema:
             properties:
-              token:
+              broker:
                 type: string
               account:
                 type: string
@@ -3860,7 +3860,7 @@ paths:
           application/json: |
             {
               "identity": "$context.identity.cognitoIdentityId",
-              "token": $input.json('$.token'),
+              "broker": $input.json('$.broker'),
               "account": $input.json('$.account'),
               "page": $input.json('$.page'),
               "per_page": $input.json('$.per_page')
