--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -6603,9 +6603,6 @@ paths:
             plan:
               type:
                 type: string
-            username:
-              type:
-                type: string
       responses:
         '201':
           description: Subscribed
@@ -6637,8 +6634,7 @@ paths:
           application/json: |
             {
               "identity": "$context.identity.cognitoIdentityId",
-              "plan": $input.json('$.plan'),
-              "username": $input.json('$.username')
+              "plan": $input.json('$.plan')
             }
         responses:
           201:
@@ -7017,6 +7013,125 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: "__passthrough__"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: "mock"
+  /payments/stripe/webhook:
+    post:
+      description: |
+        Strip events webhook
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            properties:
+              id:
+                type: string
+              object:
+                type: string
+              api_version:
+                type: string
+              created:
+                type: inetger
+              data:
+                type: object
+              livemode:
+                type: boolean
+              pending_webhooks:
+                type: inetger
+              type:
+                type: string
+      responses:
+        '201':
+          description: Successful response
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        '400':
+          description: No Found
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        '404':
+          description: No Found
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        '500':
+          description: Error
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+      x-amazon-apigateway-auth:
+        type: none
+      x-amazon-apigateway-integration:
+        type: http
+        httpMethod: post
+        uri: {{getenv "HTTP_PROTOCOL"}}://payments-api.{{getenv "HOSTED_ZONE"}}/stripe/webhook
+        requestTemplates:
+          application/json: |
+            {
+              "id": $input.json('$.id'),
+              "object": $input.json('$.object'),
+              "api_version": $input.json('$.api_version'),
+              "created": $input.json('$.created'),
+              "data": $input.json('$.data'),
+              "livemode": $input.json('$.livemode'),
+              "pending_webhooks": $input.json('$.pending_webhooks'),
+              "request": $input.json('$.request'),
+              "type": $input.json('$.type')
+            }
+        responses:
+          default:
+            statusCode: "201"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json:
+          400:
+            statusCode: "400"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json:
+          404:
+            statusCode: "404"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json:
+          500:
+            statusCode: "500"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json:
+    options:
+      parameters: []
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Max-Age:
+              type: "string"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
             responseTemplates:
